# anvil

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: benchmark-regression.yml
autonomous/: __init__.py  budget.py  config.py  context_compaction.py  daemon.py  graph.py  main.py  metrics.py  seed_docs.py  state.py  telemetry.py
autonomous/memory/: __init__.py  consolidator.py  embedder.py  episodic.py  shared.py  skills.py  success_patterns.py  verification_lessons.py
autonomous/nodes/: __init__.py  doc_context.py  executor.py  inventory.py  meta_planner.py  planner.py  reflector.py  retrospective.py
autonomous/safety/: approval.py  checks.py  doctest_check.py  output_truncation.py  property_fuzz.py  public_test_verifier.py  sandbox.py
autonomous/tools/: __init__.py  base.py  code_tool.py  context7.py  filesystem.py  git_tool.py  nia.py  pskit_mcp.py  public_tests.py  research.py  shell.py  symbols.py  verify.py
benchmarks/: README.md  __init__.py
benchmarks/aider_polyglot/: README.md  __init__.py  adapter.py  run.py
benchmarks/bfcl/: README.md  __init__.py  adapter.py  run.py
benchmarks/bigcodebench/: README.md  __init__.py  adapter.py  run.py
benchmarks/common/: __init__.py  adapter.py  cli.py  results.py  runner.py
benchmarks/humaneval/: README.md  __init__.py  adapter.py  run.py
benchmarks/livecodebench/: README.md  __init__.py  adapter.py  run.py
benchmarks/swebench/: README.md  __init__.py  adapter.py  run.py
