[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "anvil-agent"
version = "0.1.0"
description = "Autonomous multi-agent coding system with neural safety, semantic memory, and local fleet inference"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Nickalus Brewer" },
]
keywords = [
    "agent", "autonomous", "coding", "langgraph", "vllm",
    "multi-agent", "reac", "memory", "pskit", "mcp",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "openai>=1.40",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "pydantic>=2.8",
    "httpx>=0.27",
    "numpy>=1.26",
    "sqlite-vec>=0.1",
    "trafilatura>=1.12",
    "ddgs>=6.0",
    "mcp>=1.0",
    "pillow>=10.0",
]

[project.optional-dependencies]
pskit = ["pskit-mcp>=0.3.3"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[project.scripts]
anvil = "autonomous.main:cli"
anvild = "autonomous.daemon:cli"

[project.urls]
Homepage = "https://github.com/Nickalus12/anvil"
Issues = "https://github.com/Nickalus12/anvil/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["autonomous*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
